release 0.10 (2008-09-xx)
- Integrated JSR 311 API 0.10
  - java.ws.rs.core.ApplicationConfig renamed to java.ws.rs.core.Application
  - ApplicationConfig.getResourceClasses() and
    ApplicationConfig.getProviderClasses() merged into one method
    Application.getClasses()
  - Application.getSingletons() can be used to add singleton provider
    instances or root resource class instances.
  - URI templates declared in @Path now support general regular expressions.
    A regular expression may be declared by declaring the template variable
    followed by a ':' followed by the regular expression. For example, the
    URI template "{n: .+}" declares there to be one template variable 'n' whose
    regular expression is ".+". In the absense of a declared regular expression
    the default expression "[^/]+?" applies. White space may occur between the
    '{' and the template variable name, between the template variable name
    and the ':', between the ':' and the regular expression, and finally
    between the regular expression and the '}'. Non-compliant characters for
    a URI path must be percent-encoded.
  - @Path "limited" and "encode" properties have been removed.
    The @Path(value="{a}", limited=false) is equivalent to
    @Path("{a: .*}") or @Path("{a: .+}")
  - javax.ws.rs.core.UriBuilder.encode has been removed. Instead contextual
    encoding is performed automatically. Any non-compliant character is
    percent-encoded but existing percent-encoded character (namely a '%' followed
    by two hexadecimal characters) is left unmodified (thus the '%' character
    is not percent-encoded itself).

release 0.9 (2008-08-22)
- Fixed issue 50
  https://jersey.dev.java.net/issues/show_bug.cgi?id=50
  Jersey version is included in the WADL as the first doc element.
- Fixed issue 97
  https://jersey.dev.java.net/issues/show_bug.cgi?id=96
  Methods on JAX-RS conforming annotated interfaces (if present) are used 